@startuml

entity users {
  * id : BIGINT <<PK>>
  --
  email : VARCHAR(255)
}

entity jobs {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  interval_seconds : BIGINT
  query : TEXT
  category_name : TEXT
  zip_code : TEXT
  distance : BIGINT
  price_from : BIGINT
  price_to : BIGINT
  limit : BIGINT
  sort_by : TEXT
  sort_order : TEXT
  condition : TEXT
  offered_since : TIMESTAMP
  extra_attributes : JSON
  enabled : BOOLEAN
  created_at : TIMESTAMP
  next_run_at: TIMESTAMP
  last_run_at: TIMESTAMP
}

entity notifier {
  * id: BIGINT <<PK>>
  --
  user_id: BIGINT <<FK>>
  params: JSON
}



users ||--o{ jobs
users ||--|| notifier
jobs ||--o{ last_seen_ads

@enduml